--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h3>Testing some content</h3>
-    <p>I also add some paragraph as well.</p>
+    <p>I also add some paragraph as well. Just edited.</p>
   </body>
 </html>
