--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <h3>Testing some content</h3>
     <p>I also add some paragraph as well. Just edited.</p>
+
+    <p>add another paragraph.</p>
   </body>
 </html>
